# othello-modular

./: .flake8  .gitignore  CLAUDE.md  README.md  fix_imports.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat
docs/source/: conf.py
src/othello/: main.py
src/othello/core/: __init__.py  board.py  constants.py  engine.py  events.py  game_state.py  interfaces.py  rules.py
src/othello/gui/: __init__.py  board_widget.py  events.py  game_controller.py  main_window.py  menu_widget.py  score_widget.py
src/othello/players/: __init__.py  ai_player.py  human_adapter.py  interfaces.py  random_player.py
src/othello/utils/: sounds.py
tests/: conftest.py
tests/core/: test_board.py  test_constants.py  test_engine.py  test_rules.py
tests/gui/: test_game_controller.py  test_main_window.py  test_pass_notification.py
tests/players/: test_ai_player.py  test_human_adapter.py  test_player_integration.py  test_random_player.py
